--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,221 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  80% {
+    transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 /* ------------------------ */
 /* GENERAL SETUP */
 /* ------------------------ */
-
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
-
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+@media only screen and (max-width: 68.75em) {
+  html {
+    font-size: 50%;
+  }
+}
 body {
-  background-color: #fff;
-  color: #555;
   font-family: 'Inconsolata', sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  color: #555;
+  background-color: #fff;
   text-rendering: optimizeLegibility;
 }
-
-a {
-  text-decoration: none;
-}
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
+  font-weight: 400;
 }
-
 h1 {
-  margin-top: 0px;
+  font-size: 9.6rem;
   color: #fff;
-  margin-bottom: 20px;
-  font-size: 96px;
+  margin-bottom: 2rem;
 }
-
 h3 {
-  margin-top: 0px;
-  margin-bottom: 12px;
-  font-size: 18px;
+  margin-bottom: 1.2rem;
+  font-size: 1.8rem;
   font-weight: 700;
 }
-
 p {
-  font-size: 18px;
-  line-height: 120%;
-  margin-bottom: 20px;
+  font-size: 1.8rem;
+  line-height: 1.2;
+  margin-bottom: 2rem;
 }
-
 /* ------------------------ */
-/* REUSABLE COMPONENTS */
+/* GRID */
 /* ------------------------ */
-
+.columns {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 37.5em) {
+  .columns {
+    flex-direction: column;
+  }
+}
+.column {
+  flex: 1;
+  margin-right: 1.6rem;
+  padding: 1.6rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .column {
+    margin-right: 0rem;
+  }
+}
+.column:last-child {
+  margin-right: 0rem;
+}
+/* ------------------------ */
+/* CARD */
+/* ------------------------ */
+.card {
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  border-radius: 0.4rem;
+  padding: 2.4rem;
+  transition: all ease 0.3s;
+  background-color: #fff;
+}
+.card:hover {
+  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  transform: scale(1.02);
+}
+/* ------------------------ */
+/* LINK */
+/* ------------------------ */
+a:link,
+a:visited {
+  color: #eb2f64;
+  text-decoration: none;
+  padding-bottom: 0.1rem;
+  border-bottom: 0.1rem solid #eb2f64;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 0.1rem solid transparent;
+}
+/* ------------------------ */
+/* BUTTON */
+/* ------------------------ */
+.btn {
+  display: inline-block;
+  padding: 1.6rem 3rem;
+  font-size: 1.6rem;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 20rem;
+  color: #fff;
+  text-transform: uppercase;
+  transition: all ease 0.3s;
+  cursor: pointer;
+}
+.btn:focus {
+  outline: none;
+}
+.btn--full {
+  background-color: #eb2f64;
+  border: 0.1rem solid #eb2f64;
+}
+.btn--full:link,
+.btn--full:visited {
+  background-color: #eb2f64;
+  border: 0.1rem solid #eb2f64;
+}
+.btn--full:hover,
+.btn--full:active {
+  background-color: #ff3366;
+  border: 0.1rem solid #ff3366;
+}
+.btn--ghost {
+  background-color: transparent;
+  border: 0.1rem solid #eb2f64;
+  color: #eb2f64;
+}
+.btn--ghost:link,
+.btn--ghost:visited {
+  background-color: transparent;
+  border: 0.1rem solid #eb2f64;
+  color: #eb2f64;
+}
+.btn--ghost:hover,
+.btn--ghost:active {
+  color: #fff;
+  border: 0.1rem solid #ff3366;
+}
+.btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
+}
+/* ------------------------ */
+/* COMPONENTS */
+/* ------------------------ */
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0 16px;
+  padding: 0 1.6rem;
   width: 100%;
-  max-width: 1000px;
+  max-width: 120rem;
   margin: 0 auto;
 }
-
 .align-center {
   align-items: center;
 }
-
 .section {
-  padding: 80px 0;
+  padding: 8rem 0;
 }
-
-.section-about-us {
-}
-
 .section-cards {
-  background-color: rgb(226, 226, 226);
+  background-color: #f9f7f6;
 }
-
 /* ------------------------ */
 /* HEADER */
 /* ------------------------ */
 .header-content {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(img/restaurant-2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/restaurant-2.jpg);
   background-size: cover;
   background-position: center;
   height: 75vh;
@@ -93,151 +224,52 @@ p {
   justify-content: center;
   align-items: center;
 }
-
 .logo {
   display: block;
-  height: 48px;
+  height: 4.8rem;
 }
-
 .slogan {
   color: #fff;
-  font-size: 28px;
+  font-size: 2.8rem;
 }
-
 header nav {
   position: fixed;
   width: 100%;
-  margin: 10px 0;
-  padding: 10px 0;
+  margin: 1rem 0;
+  padding: 1rem 0;
   z-index: 999;
 }
-
 .navigation {
   position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .main-nav {
-  padding-bottom: 16px;
-  padding-top: 16px;
+  padding-bottom: 1.6rem;
+  padding-top: 1.6rem;
 }
-
 .main-nav ul {
   list-style: none;
 }
-
 .main-nav li {
   display: inline-block;
+  font-size: 1.6rem;
 }
-
 .main-nav a:link,
 .main-nav a:visited {
   text-decoration: none;
   color: #555;
   display: block;
   background-color: #fff;
-  border: 2px solid #fff;
-  padding: 8px 16px;
+  border: 0.2rem solid #fff;
+  padding: 0.8rem 1.6rem;
   transition: all ease 0.2s;
 }
-
 .main-nav a:hover,
 .main-nav a:active {
   text-decoration: none;
   background-color: transparent;
-  border: 2px solid #fff;
+  border: 0.2rem solid #fff;
   color: #fff;
-}
-
-/* ------------------------ */
-/* GRID */
-/* ------------------------ */
-.columns {
-  display: flex;
-  justify-content: space-between;
-}
-
-.column {
-  flex: 1;
-  margin-right: 16px;
-  padding: 16px;
-}
-
-.column:last-child {
-  margin-right: 0px;
-}
-
-/* ------------------------ */
-/* CARD */
-/* ------------------------ */
-.card {
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  padding: 24px;
-  transition: all ease 0.3s;
-  background-color: #fff;
-}
-
-.card:hover {
-  box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.15);
-  transform: scale(1.02);
-}
-
-/* ------------------------ */
-/* BUTTON */
-/* ------------------------ */
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  padding: 10px 30px;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 200px;
-  color: #fff;
-  text-transform: uppercase;
-  transition: all ease 0.3s;
-}
-
-.btn-full:link,
-.btn-full:visited {
-  background-color: #ff654a;
-  border: 1px solid #ff654a;
-}
-
-.btn-ghost:link,
-.btn-ghost:visited {
-  background-color: transparent;
-  border: 1px solid #ff654a;
-  color: #ff654a;
-}
-
-.btn:hover,
-.btn:active {
-  background-color: #df553d;
-}
-
-.btn-full:hover,
-.btn-full:active {
-  border: 1px solid #df553d;
-}
-
-.btn-ghost:hover,
-.btn-ghost:active {
-  color: #fff;
-  border: 1px solid #df553d;
-}
-
-/* ------------------------ */
-/* MEDIA QUERIES */
-/* ------------------------ */
-
-@media screen and (max-width: 480px) {
-  .columns {
-    flex-direction: column;
-  }
-  .column {
-    margin-right: 0px;
-  }
 }
