--- a/css/less/base.less
+++ b/css/less/base.less
@@ -1,9 +1,7 @@
 // main: ./main.less
 
-/* ------------------------ */
-/* GENERAL SETUP */
-/* ------------------------ */
-
+////////////////////////////////////////
+// GENERAL SETUP
 *,
 *::before,
 *::after {
@@ -26,31 +24,4 @@ body {
   color: @color-grey-dark-2;
   background-color: @color-white;
   text-rendering: optimizeLegibility;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
-}
-
-h1 {
-  font-size: 9.6rem;
-  color: @color-white;
-  margin-bottom: 2rem;
-}
-
-h3 {
-  margin-bottom: 1.2rem;
-  font-size: 1.8rem;
-  font-weight: 700;
-}
-
-p {
-  font-size: 1.8rem;
-  line-height: 1.2;
-  margin-bottom: 2rem;
 }
