--- a/css/less/main.less
+++ b/css/less/main.less
@@ -1,4 +1,4 @@
-// out: ../style.css, compress: false, sourceMap: false
+// out: ../style.css, compress: true, sourceMap: true
 
 @import './variables.less';
 @import './animations.less';
