--- a/css/style.css
+++ b/css/style.css
@@ -1,328 +1,1 @@
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-  80% {
-    transform: translateX(1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-  80% {
-    transform: translateX(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-@media only screen and (max-width: 68.75em) {
-  html {
-    font-size: 50%;
-  }
-}
-body {
-  font-family: 'Inconsolata', sans-serif;
-  font-weight: 400;
-  color: #555;
-  background-color: #fff;
-  text-rendering: optimizeLegibility;
-}
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0 1.6rem;
-  width: 100%;
-  max-width: 120rem;
-  margin: 0 auto;
-}
-.align-center {
-  align-items: center;
-}
-.heading-primary {
-  color: #fff;
-  margin-bottom: 6rem;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-}
-.heading-primary--main {
-  display: block;
-  margin-bottom: 1rem;
-  font-size: 9rem;
-  font-weight: 400;
-  letter-spacing: 1rem;
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 0.5rem;
-  animation: moveInRight 1s ease-out;
-  text-align: center;
-}
-.heading-secondary {
-  margin-bottom: 3rem;
-  font-size: 3.5rem;
-  font-weight: 700;
-}
-.heading-secondary:after {
-  content: '';
-  display: block;
-  height: 0.2rem;
-  width: 100px;
-  background-color: #eb2f64;
-  margin: 0 auto;
-  margin-top: 1.5rem;
-}
-.heading-tertiary {
-  margin-bottom: 1rem;
-  font-size: 1.6rem;
-  font-weight: 700;
-}
-.paragraph {
-  font-size: 1.6rem;
-  line-height: 1.2;
-}
-.paragraph:not(:last-child) {
-  margin-bottom: 3rem;
-}
-.center-text {
-  text-align: center !important;
-}
-.margin-bottom-small {
-  margin-bottom: 1.5rem !important;
-}
-.margin-bottom-medium {
-  margin-bottom: 4rem !important;
-}
-.margin-bottom-big {
-  margin-bottom: 8rem !important;
-}
-.margin-top-big {
-  margin-top: 8rem !important;
-}
-.margin-top-huge {
-  margin-top: 10rem !important;
-}
-.columns {
-  display: flex;
-  justify-content: space-between;
-}
-@media only screen and (max-width: 37.5em) {
-  .columns {
-    flex-direction: column;
-  }
-}
-.column {
-  flex: 1;
-  margin-right: 1.6rem;
-  padding: 1.6rem;
-}
-@media only screen and (max-width: 37.5em) {
-  .column {
-    margin-right: 0rem;
-  }
-}
-.column:last-child {
-  margin-right: 0rem;
-}
-.card {
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-  border-radius: 0.4rem;
-  padding: 2.4rem;
-  transition: all ease 0.3s;
-  background-color: #fff;
-}
-.card:hover {
-  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  transform: scale(1.02);
-}
-a:link,
-a:visited {
-  color: #eb2f64;
-  text-decoration: none;
-  padding-bottom: 0.1rem;
-  border-bottom: 0.1rem solid #eb2f64;
-  transition: border-bottom 0.2s, color 0.2s;
-}
-a:hover,
-a:active {
-  color: #555;
-  border-bottom: 0.1rem solid transparent;
-}
-.btn {
-  display: inline-block;
-  padding: 1.6rem 3rem;
-  font-size: 1.6rem;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 20rem;
-  color: #fff;
-  text-transform: uppercase;
-  transition: all ease 0.3s;
-  cursor: pointer;
-}
-.btn:focus {
-  outline: none;
-}
-.btn--full {
-  background-color: #eb2f64;
-  border: 0.1rem solid #eb2f64;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: #eb2f64;
-  border: 0.1rem solid #eb2f64;
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: #ff3366;
-  border: 0.1rem solid #ff3366;
-}
-.btn--ghost {
-  background-color: transparent;
-  border: 0.1rem solid #eb2f64;
-  color: #eb2f64;
-}
-.btn--ghost:link,
-.btn--ghost:visited {
-  background-color: transparent;
-  border: 0.1rem solid #eb2f64;
-  color: #eb2f64;
-}
-.btn--ghost:hover,
-.btn--ghost:active {
-  color: #fff;
-  border: 0.1rem solid #ff3366;
-}
-.btn--animated {
-  animation: moveInBottom 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards;
-}
-.section {
-  padding: 6rem 0;
-}
-.section-about {
-  padding: 6rem 0;
-}
-.section-gallery {
-  padding: 6rem 0;
-  background-color: #f9f7f6;
-}
-.section-testimonials {
-  padding: 6rem 0;
-}
-.section-reservation {
-  padding: 6rem 0;
-  background-color: #f9f7f6;
-}
-.section-map {
-  padding: 6rem 0;
-}
-.footer {
-  padding: 6rem 0;
-  background-color: #333;
-  color: #fff;
-}
-.footer__box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/restaurant-2.jpg);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 75vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.logo {
-  display: block;
-  height: 4.8rem;
-}
-.navigation {
-  position: fixed;
-  width: 100%;
-  padding: 1rem 0;
-  z-index: 999;
-  transition: background-color ease 0.3s;
-}
-.navigation-fixed {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.navigation-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0 1.6rem;
-  width: 100%;
-  max-width: 120rem;
-  margin: 0 auto;
-  align-items: center;
-}
-.navigation__nav {
-  padding-bottom: 1.6rem;
-  padding-top: 1.6rem;
-}
-.navigation__list {
-  list-style: none;
-}
-.navigation__item {
-  display: inline-block;
-  font-size: 1.6rem;
-}
-.navigation__link:link,
-.navigation__link:visited {
-  text-decoration: none;
-  color: #555;
-  display: block;
-  background-color: #fff;
-  border: 0.2rem solid #fff;
-  padding: 0.8rem 1.6rem;
-  transition: all ease 0.2s;
-}
-.navigation__link:hover,
-.navigation__link:active {
-  text-decoration: none;
-  background-color: transparent;
-  border: 0.2rem solid #fff;
-  color: #fff;
-}
+@keyframes moveInLeft{0%{opacity:0;transform:translateX(-10rem)}80%{transform:translateX(1rem)}100%{opacity:1;transform:translate(0)}}@keyframes moveInRight{0%{opacity:0;transform:translateX(10rem)}80%{transform:translateX(-1rem)}100%{opacity:1;transform:translate(0)}}@keyframes moveInBottom{0%{opacity:0;transform:translateY(3rem)}100%{opacity:1;transform:translate(0)}}*,*::before,*::after{margin:0;padding:0;box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}@media only screen and (max-width:68.75em){html{font-size:50%}}body{font-family:'Inconsolata',sans-serif;font-weight:400;color:#555;background-color:#fff;text-rendering:optimizeLegibility}.container{display:flex;flex-wrap:wrap;justify-content:space-between;padding:0 1.6rem;width:100%;max-width:120rem;margin:0 auto}.align-center{align-items:center}.heading-primary{color:#fff;margin-bottom:6rem;text-transform:uppercase;backface-visibility:hidden}.heading-primary--main{display:block;margin-bottom:1rem;font-size:9rem;font-weight:400;letter-spacing:1rem;animation-name:moveInLeft;animation-duration:1s;animation-timing-function:ease-out}.heading-primary--sub{display:block;font-size:2rem;font-weight:700;letter-spacing:.5rem;animation:moveInRight 1s ease-out;text-align:center}.heading-secondary{margin-bottom:3rem;font-size:3.5rem;font-weight:700}.heading-secondary:after{content:'';display:block;height:.2rem;width:100px;background-color:#eb2f64;margin:0 auto;margin-top:1.5rem}.heading-tertiary{margin-bottom:1rem;font-size:1.6rem;font-weight:700}.paragraph{font-size:1.6rem;line-height:1.2}.paragraph:not(:last-child){margin-bottom:3rem}.center-text{text-align:center !important}.margin-bottom-small{margin-bottom:1.5rem !important}.margin-bottom-medium{margin-bottom:4rem !important}.margin-bottom-big{margin-bottom:8rem !important}.margin-top-big{margin-top:8rem !important}.margin-top-huge{margin-top:10rem !important}.columns{width:100%;display:flex;justify-content:space-between}@media only screen and (max-width:37.5em){.columns{flex-direction:column}}.column{flex:1;margin-right:1.6rem;padding:1.6rem}@media only screen and (max-width:37.5em){.column{margin-right:0}}.column:last-child{margin-right:0}.card{box-shadow:0 2rem 5rem rgba(0,0,0,0.06);border-radius:.4rem;padding:2.4rem;transition:all ease .3s;background-color:#fff}.card:hover{box-shadow:0 2rem 6rem rgba(0,0,0,0.3);transform:scale(1.02)}a:link,a:visited{color:#eb2f64;text-decoration:none;padding-bottom:.1rem;border-bottom:.1rem solid #eb2f64;transition:border-bottom .2s,color .2s}a:hover,a:active{color:#555;border-bottom:.1rem solid transparent}.btn{display:inline-block;padding:1.6rem 3rem;font-size:1.6rem;font-weight:300;text-decoration:none;border-radius:20rem;color:#fff;text-transform:uppercase;transition:all ease .3s;cursor:pointer}.btn:focus{outline:none}.btn--full{background-color:#eb2f64;border:.1rem solid #eb2f64}.btn--full:link,.btn--full:visited{background-color:#eb2f64;border:.1rem solid #eb2f64}.btn--full:hover,.btn--full:active{background-color:#ff3366;border:.1rem solid #ff3366}.btn--ghost{background-color:transparent;border:.1rem solid #eb2f64;color:#eb2f64}.btn--ghost:link,.btn--ghost:visited{background-color:transparent;border:.1rem solid #eb2f64;color:#eb2f64}.btn--ghost:hover,.btn--ghost:active{color:#fff;border:.1rem solid #ff3366}.btn--animated{animation:moveInBottom .5s ease-out .75s;animation-fill-mode:backwards}.section{padding:6rem 0}.section-about{padding:6rem 0}.section-gallery{padding:0;margin:0}.section-gallery .gallery-showcase{display:flex}.section-gallery .gallery-photo{width:100%;overflow:hidden;background-color:#000}.section-gallery .gallery-photo img{opacity:.7;width:100%;height:auto;transform:scale(1.15);transition:transform .5s,opacity .5s;backface-visibility:hidden}.section-gallery .gallery-photo img:hover{opacity:1;transform:scale(1.03)}.section-testimonials{padding:6rem 0}.section-reservation{padding:6rem 0;background-color:#f9f7f6}.section-map{padding:6rem 0}.footer{padding:6rem 0;background-color:#333;color:#fff;display:flex;justify-content:center}.footer__box{max-width:120rem;display:flex;flex-direction:column;align-items:center;justify-content:center}.footer__box p{color:#aaa;font-size:1.2rem}.footer-nav{list-style:none;margin-bottom:2.2rem}.footer-nav li{display:inline-block;margin-right:2rem}.footer-nav li a{text-decoration:none;border:0;font-size:1.8rem;color:#aaa}.footer-nav li a:hover{color:#f9f7f6}.header{background-image:linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url(img/restaurant-2.jpg);background-size:cover;background-position:center;background-attachment:fixed;height:75vh;display:flex;flex-direction:column;justify-content:center;align-items:center}.logo{display:block;height:4.8rem}.navigation{position:fixed;width:100%;padding:1rem 0;z-index:999;transition:background-color ease .3s}.navigation-fixed{background-color:rgba(0,0,0,0.5)}.navigation-box{display:flex;flex-wrap:wrap;justify-content:space-between;padding:0 1.6rem;width:100%;max-width:120rem;margin:0 auto;align-items:center}.navigation__nav{padding-bottom:1.6rem;padding-top:1.6rem}.navigation__list{list-style:none}.navigation__item{display:inline-block;font-size:1.6rem}.navigation__link:link,.navigation__link:visited{text-decoration:none;color:#555;display:block;background-color:#fff;border:.2rem solid #fff;padding:.8rem 1.6rem;transition:all ease .2s}.navigation__link:hover,.navigation__link:active{text-decoration:none;background-color:transparent;border:.2rem solid #fff;color:#fff}/*# sourceMappingURL=./main.css.map */
