--- a/css/less/layout.less
+++ b/css/less/layout.less
@@ -20,20 +20,18 @@
     width: 100%;
     overflow: hidden;
     background-color: #000;
-  }
-
-  .gallery-photo img {
-    opacity: 0.7;
-    width: 100%;
-    height: auto;
-    transform: scale(1.15);
-    transition: transform 0.5s, opacity 0.5s;
-    backface-visibility: hidden;
-  }
-
-  .gallery-photo img:hover {
-    opacity: 1;
-    transform: scale(1.03);
+    img {
+      opacity: 0.7;
+      width: 100%;
+      height: auto;
+      transform: scale(1.15);
+      transition: transform 0.5s, opacity 0.5s;
+      backface-visibility: hidden;
+      &:hover {
+        opacity: 1;
+        transform: scale(1.03);
+      }
+    }
   }
 }
 
